--- a/my-react-app/src/components/styles_Login.css
+++ b/my-react-app/src/components/styles_Login.css
@@ -26,6 +26,7 @@ p{
     text-align: center;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
 
 }
 
@@ -57,7 +58,7 @@ p{
 
 
 input {
-    width: 97%;
+    width: 300px;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -94,4 +95,16 @@ input::placeholder {
     font-family: Arial, sans-serif;
     font-style: italic;
     color: #999;
+}
+
+
+
+.facebook-login-button{
+    max-width: 300px;
+
+}
+
+
+.google-login-button{
+    max-width: 300px;
 }
